# oxygen-transparent

./: CMakeLists.txt  INSTALL  Messages.sh  oxygen-setup.pl
decoration/: CMakeLists.txt  oxygenclient.cpp  oxygenclient.desktop  oxygenclient.h  oxygenconfigdata.kcfg  oxygenconfiguration.cpp  oxygenconfiguration.h  oxygendecohelper.cpp  oxygenexceptionlist.cpp  oxygenfactory.cpp  oxygensizegrip.cpp  oxygentransparentclient.desktop
decoration/config/: CMakeLists.txt  oxygenconfig.cpp  oxygenconfig.h  oxygenconfigurationui.cpp  oxygenconfigurationui.h  oxygenconfigwidget.cpp  oxygendetectwidget.cpp  oxygenexceptiondialog.cpp  oxygenexceptionlistwidget.cpp  oxygenexceptionlistwidget.h
decoration/config/ui/: oxygenconfigurationui.ui  oxygenexceptiondialog.ui  oxygenexceptionlistwidget.ui
libs/: CMakeLists.txt  oxygenhelper.cpp  oxygenhelper.h  oxygenshadowcache.cpp  oxygenshadowconfiguration.cpp  oxygenshadowconfiguration.h
style/: CMakeLists.txt  oxygen.kcfg  oxygen.themerc  oxygen_transparent.json  oxygen_transparent.themerc  oxygenargbhelper.cpp  oxygenargbhelper.h  oxygenblurhelper.cpp  oxygenblurhelper.h  oxygenmdiwindowshadow.cpp  oxygenpropertynames.cpp  oxygenpropertynames.h  oxygenshadowhelper.cpp  oxygenshadowhelper.h  oxygenstyle.cpp  oxygenstyle.h  oxygenstylehelper.cpp  oxygenstylehelper.h  oxygenwindowmanager.cpp
style/animations/: oxygentabbardata.cpp
style/config/: CMakeLists.txt  oxygenblacklistdialog.cpp  oxygenblacklistdialog.h  oxygenblacklistmodel.cpp  oxygenblacklistmodel.h  oxygenconfigdialog.cpp  oxygenstyleconfig.cpp  oxygenstyleconfig.h
style/config/ui/: oxygenblacklistdialog.ui  oxygenstyleconfig.ui
style/transitions/: oxygenlabelengine.cpp  oxygenlabelengine.h  oxygentransitiondata.h  oxygentransitions.cpp
